finished blog, tests remain, deploy to cloud

--- a/public/blog.html
+++ b/public/blog.html
@@ -19,13 +19,14 @@
 
     <header>
         <nav>
-            <h3>Kushagra's CS Blogs</h3>
+            <h3 id="blog-title"></h3>
+            <small id="blog-date"></small>
         </nav>
         <hr>
     </header>
 
     <div id="blog-display" class="blogs-list-container"></div>
-    <div id="blog-comments-display" class="blogs-list-container"></div>
+    <!-- <div id="blog-comments-display" class="blogs-list-container"></div> -->
 
     <footer>
         <hr>
