--- a/public/portal.html
+++ b/public/portal.html
@@ -19,18 +19,18 @@
 
     <header>
         <nav>
-            <h3>Kushagra's CS Blogs</h3>
+            <button id="new-blog" type="button" class="btn btn-dark">New Blog</button>
+            <button id="logout" type="button" class="btn btn-light">Logout</button>
         </nav>
         <hr>
     </header>
 
-    <div id="blog-display" class="blogs-list-container"></div>
-    <div id="blog-comments-display" class="blogs-list-container"></div>
+    <div id="blogs-list" class="blogs-list-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="javascripts/get-blog.js"></script>
+    <script src="javascripts/portal.js"></script>
 </body>
 
 </html>
