--- a/public/edit-blog.html
+++ b/public/edit-blog.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <link rel="stylesheet" href="stylesheets/style.css">
 
-    <title>Portal</title>
+    <title>Edit Blog</title>
 </head>
 
 <body>
