fixed main page layout, no summary

--- a/public/blog.html
+++ b/public/blog.html
@@ -25,7 +25,7 @@
         <hr>
     </header>
 
-    <div id="blog-display" class="blogs-list-container"></div>
+    <div id="blog-display" class="blogs-list-container blog-display"></div>
     <!-- <div id="blog-comments-display" class="blogs-list-container"></div> -->
 
     <footer>
