added link to files page

--- a/public/portal.html
+++ b/public/portal.html
@@ -20,6 +20,7 @@
     <header>
         <nav>
             <button id="new-blog" type="button" class="btn btn-dark">New Blog</button>
+            <button id="files" type="button" class="btn btn-dark">Files</button>
             <button id="logout" type="button" class="btn btn-light">Logout</button>
         </nav>
         <hr>
